Fixed broken list in chrome mobile
In chrome mobile, the linear-gradient background was not being clipped to the text, so instead of the countdown list, you would see a list of blue rectangles. I fixed this by putting it into and @supports

--- a/css/countdown_beta.css
+++ b/css/countdown_beta.css
@@ -147,9 +147,19 @@ body.done {
   white-space: nowrap;
   overflow: hidden;
   width: calc(100% - 5px);
-  color: transparent;
-  background-clip: text;
-  background-image: linear-gradient(to right, var(--txt) 0%, var(--txt) calc(100% - 21.583px), var(--bg) calc(100% - 6.583px), var(--bg) 100%);
+}
+@supports (background-clip: text) {
+  #list #list-menus.list .list-item div {
+    color: transparent;
+    background-clip: text;
+    background-image: linear-gradient(to right, var(--txt) 0%, var(--txt) calc(100% - 21.583px), var(--bg) calc(100% - 6.583px), var(--bg) 100%);
+  }
+}
+@supports not (background-clip: text) {
+  #list #list-menus.list .list-item div {
+    color: var(--txt);
+    text-overflow: ellipsis;
+  }
 }
 #list #list-menus #custom-list div.popup {
   margin: 60px auto;
